dump action info

--- a/Actions/DeployPowerPlatform/action.yaml
+++ b/Actions/DeployPowerPlatform/action.yaml
@@ -23,7 +23,11 @@ runs:
     - name: dump
       shell: pwsh
       run: |
-        Get-ComputerInfo | Out-Host
+        Write-Host "github.action = '${{ github.action }}'"
+        Write-Host "github.action_path = '${{ github.action_path }}'"
+        Write-Host "github.action_ref = '${{ github.action_ref }}'"
+        Write-Host "github.action_repository = '${{ github.action_repository }}'"
+        Write-Host "github.action_status = '${{ github.action_status }}'"
 
     - name: dump
       shell: pwsh
