--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -262,6 +262,8 @@ jobs:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
           shell: powershell
+          actionsRepo: ${{ fromJson('{"repo":"microsoft/AL-Go-Actions","ref"="main"}').repo }}
+          actionsRef: ${{ fromJson('{"repo":"microsoft/AL-Go-Actions","ref"="main"}').ref }}
           environmentName: ${{ matrix.environment }}
           artifacts: '.artifacts'
           deploymentEnvironmentsJson: ${{ needs.Initialization.outputs.deploymentEnvironmentsJson }}
