--- a/Actions/GetArtifactsForDeployment/action.yaml
+++ b/Actions/GetArtifactsForDeployment/action.yaml
@@ -5,10 +5,6 @@ inputs:
     description: Shell in which you want to run the action (powershell or pwsh)
     required: false
     default: powershell
-  actor:
-    description: The GitHub actor running the action
-    required: false
-    default: ${{ github.actor }}
   token:
     description: The GitHub token running the action
     required: false
@@ -25,14 +21,13 @@ runs:
     - name: run
       shell: ${{ inputs.shell }}
       env:
-        _actor: ${{ inputs.actor }}
         _token: ${{ inputs.token }}
         _artifactsVersion: ${{ inputs.artifactsVersion }}
         _artifactsFolder: ${{ inputs.artifactsFolder }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/GetArtifactsForDeployment.ps1 -actor $ENV:_actor -token $ENV:_token -artifactsVersion $ENV:_artifactsVersion -artifactsFolder $ENV:_artifactsFolder
+          ${{ github.action_path }}/GetArtifactsForDeployment.ps1 -token $ENV:_token -artifactsVersion $ENV:_artifactsVersion -artifactsFolder $ENV:_artifactsFolder
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
