--- a/Actions/DeployPowerPlatform/action.yaml
+++ b/Actions/DeployPowerPlatform/action.yaml
@@ -57,6 +57,17 @@ runs:
         deploymentEnvironmentsJson: ${{ inputs.deploymentEnvironmentsJson }} 
         environmentName: ${{ inputs.environmentName }}
 
+    - name: dumps
+      run: |
+        echo "ppEnvironmentUrl=${{ steps.ReadPowerPlatformSettings.outputs.ppEnvironmentUrl }}"
+        echo "ppUserName=${{ steps.ReadPowerPlatformSettings.outputs.ppUserName }}"
+        echo "ppPassword=${{ steps.ReadPowerPlatformSettings.outputs.ppPassword }}"
+        echo "ppApplicationId=${{ steps.ReadPowerPlatformSettings.outputs.ppApplicationId }}"
+        echo "ppTenantId=${{ steps.ReadPowerPlatformSettings.outputs.ppTenantId }}"
+        echo "ppClientSecret=${{ steps.ReadPowerPlatformSettings.outputs.ppClientSecret }}"
+        echo "companyId=${{ steps.ReadPowerPlatformSettings.outputs.companyId }}"
+        echo "environmentName=${{ steps.ReadPowerPlatformSettings.outputs.environmentName }}"
+
     - name: Who am I (username)
       if: steps.ReadPowerPlatformSettings.outputs.ppUserName != ''
       uses: microsoft/powerplatform-actions/who-am-i@v1
