--- a/Actions/ReadPowerPlatformSettings/action.yaml
+++ b/Actions/ReadPowerPlatformSettings/action.yaml
@@ -40,6 +40,7 @@ runs:
   using: composite
   steps:
     - name: run
+      id: ReadPowerPlatformSettings
       shell: ${{ inputs.shell }}
       env:
         _deploymentEnvironmentsJson: ${{ inputs.deploymentEnvironmentsJson }}
