--- a/Actions/BuildPowerPlatform/action.yaml
+++ b/Actions/BuildPowerPlatform/action.yaml
@@ -50,7 +50,7 @@ runs:
       uses: microsoft/powerplatform-actions/actions-install@v1
 
     - name: Update solution settings
-      if: ${{ inputs.appBuild != '' }}
+      if: inputs.appBuild != ''
       shell: ${{ inputs.shell }}
       env: 
         _solutionFolder: ${{inputs.solutionFolder}}
@@ -60,7 +60,7 @@ runs:
         ${{ github.action_path }}\updateSolutionFile.ps1 -appBuild $ENV:_appBuild -appRevision $ENV:_appRevision -solutionFolder $ENV:_solutionFolder
     
     - name: Update BC connection settings
-      if: ${{ inputs.companyId != '' }}
+      if: inputs.companyId != ''
       shell: ${{ inputs.shell }}
       env: 
         _solutionFolder: ${{inputs.solutionFolder}}
